--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -409,7 +409,7 @@
   </div>
 </div>
 
-<br><br><br><br><br><br><br>
+<br><br><br><br><br><br>
 
 
 
@@ -432,36 +432,24 @@
     <source src="https://video.wixstatic.com/video/7f5efc_0e8a173ccdfd4f928f2d5c123415d129/480p/mp4/file.mp4" type="video/mp4">
   </video>
 </div>
+</section>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+document.addEventListener("DOMContentLoaded", function() {
   const v = document.getElementById("videoAreaMiembros");
-
-  // Tentativa automática de autoplay
   const tryPlay = () => {
-    if (!v) return;
-    v.muted = true; // obrigatório para iOS
     const playPromise = v.play();
     if (playPromise !== undefined) {
       playPromise.catch(() => {
-        // Se o autoplay for bloqueado, tenta novamente ao interagir
-        const resume = () => {
-          v.play();
-          document.removeEventListener('touchstart', resume);
-          document.removeEventListener('click', resume);
-        };
-        document.addEventListener('touchstart', resume, { once: true });
-        document.addEventListener('click', resume, { once: true });
+        // iOS às vezes bloqueia até o muted autoplay
+        v.muted = true;
+        v.play();
       });
     }
   };
-
   tryPlay();
 });
 </script>
-
-
-
 
 
 <br><br><br><br>
@@ -581,7 +569,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
   });
 </script>
 
-<br><br><br>
+
 
 <!-- SEÇÃO DE BÔNUS -->
 <section class="px-3 py-20 bg-black text-center">
@@ -714,7 +702,16 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
 
 
-<br><br><br><br><br><br>
+<br><br>
+
+<!-- Imagem entre bônus e preço básico -->
+<div class="flex justify-center my-8">
+  <img 
+    src="https://i.imgur.com/710S9f0.png" 
+    alt="Separador de sección" 
+    class="w-full max-w-2xl rounded-xl opacity-90"
+    loading="lazy">
+</div>
 
 
 <!-- TÍTULO DAS OFERTAS -->
