--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -1368,7 +1368,7 @@ toast.innerHTML = `
   <div class="shrink-0 mt-0.5">${CHECK_SVG}</div>
   <div class="flex-1 leading-tight text-left">
     <div class="font-semibold">${nome}, ${uf}</div>
-    <div class="text-sm text-white/90">¡Entró en la Comunidad!</div>
+    <div class="text-sm text-white/90">¡Acaba de Garantizar!</div>
   </div>
 `;
 
