--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -1346,7 +1346,7 @@ const NOMES = [
   "Ana María", "Camila López", "Fernanda Castillo", "Juliana Rodríguez", "Mariana Herrera"
 ];
 
-  const UFS = ["AR","BO","CL","CO","CR","CU","DO","EC","MX","HN"];
+  const UFS = ["AR","BO","CL","CO","CU","MX"];
 
   const TOASTS_WRAP = document.getElementById("toasts");
   const CHECK_SVG = `
