const UFS = ["CL", "CO", "CR", "DO", "EC", "MX", "PE"];

--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -1346,7 +1346,7 @@ const NOMES = [
   "Ana María", "Camila López", "Fernanda Castillo", "Juliana Rodríguez", "Mariana Herrera"
 ];
 
-  const UFS = ["AR","BO","CL","CO","CU","MX"];
+const UFS = ["CL", "CO", "CR", "DO", "EC", "MX", "PE"];
 
   const TOASTS_WRAP = document.getElementById("toasts");
   const CHECK_SVG = `
