--- a/lp-2-es/index.html
+++ b/lp-2-es/index.html
@@ -717,7 +717,7 @@ text-shadow: 0 0 8px rgba(0,0,0,0.8), 0 0 16px rgba(0,0,0,0.7);
 
       <div class="relative z-10 -mt-4 flex flex-col flex-grow justify-between">
         <div>
-          <h3 class="text-2xl font-extrabold text-white mb-6 text-center mt-10">
+          <h3 class="text-2xl font-extrabold text-white mb-6 text-center">
             PLAN BÁSICO
           </h3>
 
