--- a/oraculo-es2/index.html
+++ b/oraculo-es2/index.html
@@ -318,6 +318,33 @@ body {
   }
 }
 
+
+
+#beginPortal {
+  background-color: #00c853 !important;
+  color: white !important;
+  border: none;
+  padding: 8px 48px;
+  font-size: 13px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-weight: bold;
+  animation: zoomInOut 1.4s ease-in-out infinite;
+  box-shadow: 0 0 15px #00c853;
+  transition: all 0.3s ease;
+}
+
+@keyframes zoomInOut {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.07);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
   </style>
 
 
@@ -356,14 +383,16 @@ body {
 <body>
 
 
-<!-- 🌀 POPUP DE INÍCIO --><!-- IMPORTANTE!-->
+
+<!-- POPUP DE INÍCIO    IMPORTANTE!-->
 <div id="startOverlay" class="overlay">
   <div class="popup-glass">
-    <h2>⚠️ATENCIÓN</h2>
-    <p>Antes de continuar, pon el <b>VOLUMEN AL MÁXIMO</b> para escuchar todo con claridad.</p>
-    <button id="beginPortal" class="btn-universal">ESCUCHAR 🔊</button>
+    <h2><b>⚠️PROHIBIDO</b></h2>
+    <p>Lo que ricos esconden… lo que vas a oír podría cambiar tu relación con el dinero para siempre.</p>
+    <button id="beginPortal">🔥 JUGAR AHORA</button>
   </div>
 </div>
+
 
 
 <style>
