--- a/oraculo-es3/index.html
+++ b/oraculo-es3/index.html
@@ -388,9 +388,9 @@ body {
 <!-- POPUP DE INÍCIO    IMPORTANTE!-->
 <div id="startOverlay" class="overlay">
   <div class="popup-glass">
-    <h2><b>⚠️PROHIBIDO</b></h2>
-    <p>Lo que ricos esconden… lo que vas a oír podría cambiar tu relación con el dinero para siempre.</p>
-    <button id="beginPortal">🔥 JUGAR AHORA</button>
+    <h2><b>⚠️CENSURADO</b></h2>
+    <p>Este audio fue bloqueado por quienes controlan el dinero. Si escuchas... ya no hay vuelta atrás.</p>
+    <button id="beginPortal">🔥 EMPEZAR EL JUEGO</button>
   </div>
 </div>
 
