--- a/oraculo-es3/index.html
+++ b/oraculo-es3/index.html
@@ -486,10 +486,12 @@ document.getElementById("beginPortal").addEventListener("click", () => {
 <!-- 🔹 Texto + botão de início -->
 <div id="introSection" style="display: none; text-align: center;">
   <div class="question-text" id="introText" style="display:block;">
-    Demuestra tu inteligencia
+    ¿Eres capaz de ver la verdad?
   </div>
-  <button id="startBtn" onclick="startQuiz()">DESBLOQUEA LO QUE TE HAN OCULTADO</button><!--Botão 01 - IMPORTANTE!-->
+  <button id="startBtn" onclick="startQuiz()">ACEPTA EL DESAFÍO SECRETO</button>
 </div>
+
+
   
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
