--- a/oraculo-es2/index.html
+++ b/oraculo-es2/index.html
@@ -515,10 +515,13 @@ document.getElementById("beginPortal").addEventListener("click", () => {
 <!-- 🔹 Texto + botão de início -->
 <div id="introSection" style="display: none; text-align: center;">
   <div class="question-text" id="introText" style="display:block;">
-    Demuestra tu inteligencia
+    El conocimiento vale oro
   </div>
-  <button id="startBtn" onclick="startQuiz()">DESBLOQUEA LO QUE TE HAN OCULTADO</button><!--Botão 01 - IMPORTANTE!-->
+  <button id="startBtn" onclick="startQuiz()">RECLAMA TUS $50 Y EL SECRETO</button>
 </div>
+
+
+
   
     <audio id="quizAudio" onended="showOptions()">
       <source id="quizAudioSrc" src="" type="audio/mpeg">
