--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -171,6 +171,7 @@ button:hover, a:hover {
   </div>
 </header>
 
+
 <script>
   const userBtn = document.getElementById('userBtn');
   const userMenu = document.getElementById('userMenu');
@@ -204,6 +205,15 @@ button:hover, a:hover {
 
 
 
+<!-- 🔹 BANNER SIMPLES, CLICÁVEL E ENCOSTANDO NAS BORDAS -->
+<section id="topBanner" class="w-full transition-all duration-500">
+  <a href="https://pay.hotmart.com/K102438982E?checkoutMode=10" target="_blank" rel="noopener noreferrer">
+    <img 
+      src="https://i.imgur.com/MKQ9nuD.png" 
+      alt="Banner superior"
+      class="w-full h-auto object-cover opacity-95 cursor-pointer">
+  </a>
+</section>
 
 
 
@@ -215,6 +225,8 @@ button:hover, a:hover {
     </p>
   </div>
 </section>
+
+
 
   <!-- MENU PRINCIPAL (Home) -->
   <main id="home" class="max-w-6xl mx-auto px-4 py-6 flex-grow">
@@ -318,6 +330,10 @@ button:hover, a:hover {
   <button class="w-full text-left p-4 rounded-xl border border-white/10 bg-white/[.03] hover:bg-white/[.06] hover:border-white/20 transition-all duration-200"
     onclick="openModal('https://drive.google.com/file/d/1PG2gQ4mmCVLLroQVKHPdSHGeZWVts6Wj/preview','BONO - Manipulación y Psicología Oscura')">
     2. BONO — Manipulación y Psicología Oscura
+  </button>
+   <button class="w-full text-left p-4 rounded-xl border border-white/10 bg-white/[.03] hover:bg-white/[.06] hover:border-white/20 transition-all duration-200"
+    onclick="openModal('https://chat.whatsapp.com/B7Aq9XpTtMBGIhjZ3iEseG','BONO — Comunidad secreta en WhatsApp')">
+    3. BONO — Comunidad secreta en WhatsApp
   </button>
 </div>
 
@@ -646,11 +662,13 @@ button:hover, a:hover {
 
 function enterAudiobook(){
   hideHome();
+  topBanner.classList.add('hidden');
   audiobook.classList.remove('hidden');
   window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 function backToHome(){
   audiobook.classList.add('hidden');
+  topBanner.classList.remove('hidden');
   bonosSection.classList.add('hidden');
   librosSection.classList.add('hidden');
   showHome();
@@ -665,23 +683,19 @@ const librosSection = document.getElementById('librosSection');
 
 function enterBonos(){
   hideHome();
+  topBanner.classList.add('hidden');
   bonosSection.classList.remove('hidden');
   window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 
 function enterLibros(){
   hideHome();
+  topBanner.classList.add('hidden');
   librosSection.classList.remove('hidden');
   window.scrollTo({ top: 0, behavior: 'smooth' });
 }
 
-function backToHome(){
-  audiobook.classList.add('hidden');
-  bonosSection.classList.add('hidden');
-  librosSection.classList.add('hidden');
-  home.classList.remove('hidden');
-  window.scrollTo({ top: 0, behavior: 'smooth' });
-}
+
 
     // Modal Iframe
     const modal = document.getElementById('modal');
@@ -751,10 +765,12 @@ function backToHome(){
 
   
   const topMessage = document.getElementById('topMessage');
+  const topBanner = document.getElementById('topBanner');
 
 function showHome() {
   home.classList.remove('hidden');
   topMessage.classList.remove('hidden');
+  
 }
 
 function hideHome() {
